# outlook-email-rag

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  sitecustomize.py
.claude/: 01-code-quality.md  02-security.md  03-docs-writing.md  04-github-ci.md  05-final-opus.md  settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
docs/: API_COMPATIBILITY.md  ARCHITECTURE_AND_METHODS.md  CLAUDE-TOOLS.md  CLI_REFERENCE.md  MCP_TOOLS.md  README.md  README_USAGE_AND_OPERATIONS.md  RELEASE_CHECKLIST.md  RELEASE_FILE_MANIFEST.md  RUNTIME_TUNING.md  TEST_ACCEPTANCE_MATRIX.md  clarify-react.md  clarify-update.md  email-cleanup.md  github-actions-notes.md  merge-latest.md  operator-pytest.md  pytest-followup.md  pytest-notes.md  react-followup.md  refresh-examples.md  repair-references-followup.md  rewrite-sketch.md  run-cleanup.md  runtime-followup.md  sanitize-tracked.md  sketch-mail.md  troubleshooting-notes.md
docs/agent/: Documentation.md  Plan.md  README.md  actor_witness_map.md  answer_synthesis_policy.md  behavioral_evidence_citations.md  behavioral_interpretation_policy.md  behavioral_strength_rubric.md  behavioral_taxonomy.md  bilingual_workflows.md  case_analysis_implementation_spec.md  case_dashboard.md  case_full_pack.md  case_pattern_engine.md  case_prompt_preflight.md  communication_graph.md  comparative_treatment.md  cross_output_consistency.md  deadline_warnings.md  deep_bug_issue_improvement_audit_2026-04-20.md  document_request_checklist.md  email_matter_analysis_single_source_of_truth.md  email_matter_investigation_checkpoint_template.md  employment_issue_frameworks.md  employment_issue_tags.md  export_delivery_formats.md  final_answer_contract.md  investigation_report_format.md  iterative_audit_loop_2026-04-26.md  language_rhetoric_signals.md  lawyer_briefing_memo.md  lawyer_issue_matrix.md  legal_support_full_pack_golden.chronology_contradiction.json  legal_support_full_pack_golden.comparator_unequal_treatment.json  legal_support_full_pack_golden.disability_participation_failures.json  legal_support_full_pack_golden.eingruppierung_task_withdrawal.json  legal_support_full_pack_golden.retaliation_rights_assertion.json  master_chronology.md  matter_evidence_index.md  matter_workspace.md  (+63 more)
scripts/: clean_ingest_reset.sh  clean_workspace.sh  dependency_audit.py  ingest_smoke.py  prepare_case_inputs.py  privacy_scan.py  private_runtime_current_env.sh  refresh_qa_eval_captured_reports.py  run_acceptance_matrix.sh  run_qa_eval.py  streamlit_smoke.py  topology_inventory.sh  wave_workflow_smoke.py
src/: __init__.py  __main__.py  actor_resolution.py  actor_witness_map.py  attachment_extractor.py  attachment_extractor_profiles.py  attachment_extractor_text.py  attachment_identity.py  attachment_record_semantics.py  attachment_surfaces.py  auto_tagger.py  behavioral_evidence_chain_citations.py  behavioral_evidence_chains.py  behavioral_interpretation_policy.py  behavioral_strength.py  behavioral_taxonomy.py  bilingual_workflows.py  bm25_index.py  body_forensics.py  body_recovery.py  case_analysis.py  case_analysis_appendix.py  case_analysis_common.py  case_analysis_coverage.py  case_analysis_harvest.py  case_analysis_harvest_bundle.py  case_analysis_harvest_common.py  case_analysis_harvest_coverage.py  case_analysis_harvest_expansion.py  case_analysis_harvest_quality.py  case_analysis_review.py  case_analysis_scope.py  case_analysis_transform.py  case_campaign_workflow.py  case_dashboard.py  case_full_pack.py  case_intake.py  case_material_intake.py  case_operator_intake.py  case_prompt_context_actors.py  (+204 more)
src/templates/: dossier.html  evidence_report.html  legal_support_handoff.html  report.html  thread_export.html
src/tools/: __init__.py  attachments.py  browse.py  case_analysis.py  categories.py  data_quality.py  diagnostics.py  diagnostics_summary.py  entities.py  evidence.py  legal_support.py  network.py  reporting.py  scan.py  search.py  search_answer_context.py  search_answer_context_budget.py  search_answer_context_case_payloads.py  search_answer_context_evidence.py  search_answer_context_evidence_candidates.py  search_answer_context_evidence_helpers.py  search_answer_context_evidence_payloads.py  search_answer_context_impl.py  search_answer_context_rendering.py  search_answer_context_runtime.py  search_answer_context_runtime_budgeting.py  search_answer_context_runtime_builder.py  search_answer_context_runtime_candidate_rows.py  search_answer_context_runtime_lanes.py  search_answer_context_runtime_payload.py  search_answer_context_runtime_ranking.py  search_answer_context_runtime_search.py  temporal.py  threads.py  topics.py  utils.py
tests/: README.md  __init__.py  _bugfix_regression_cases.py  _case_analysis_integration_cases.py  _cli_analytics_cases.py  _cli_browse_cases.py  _cli_commands_cases.py  _cli_evidence_cases.py  _cli_export_cases.py  _cli_interactive_cases.py  _cli_legacy_cases.py  _cli_search_cases.py  _cli_training_admin_cases.py  _custody_cases.py  _dossier_cases.py  _email_browse_cases.py  _email_db_attachment_cases.py  _email_db_cases.py  _email_db_core_cases.py  _email_db_network_cases.py  _email_db_regression_cases.py  _email_db_schema_cases.py  _evidence_cases.py  _ingest_cases.py  _ingest_cli_cases.py  _ingest_entities_cases.py  _ingest_extended_cases.py  _ingest_extended_edge_cases.py  _ingest_extended_pipeline_cases.py  _ingest_extended_progress_cases.py  _ingest_image_cases.py  _ingest_pipeline_cases.py  _ingest_pipeline_core_cases.py  _ingest_pipeline_metadata_cases.py  _ingest_pipeline_reembed_cases.py  _ingest_pipeline_reprocess_cases.py  _ingest_summary_cases.py  _investigation_report_assessment_cases.py  _investigation_report_cases.py  _investigation_report_issue_compact_cases.py  (+359 more)
(+75 files in other folders)
