[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "outlook-email-rag"
version = "0.1.0"
description = "Local RAG for Outlook .olm email archives with MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sentence-transformers>=2.7.0",
    "chromadb>=0.5.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "networkx>=3.2",
    "pandas>=2.1.0",
    "rank_bm25>=0.2.2",
    "jinja2>=3.0.0",
    "spacy>=3.7.0",
    "textstat>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "streamlit>=1.40.0",
]

[project.urls]
Homepage = "https://github.com/sebastianspicker/outlook-email-rag"
Repository = "https://github.com/sebastianspicker/outlook-email-rag"
Issues = "https://github.com/sebastianspicker/outlook-email-rag/issues"
Documentation = "https://github.com/sebastianspicker/outlook-email-rag#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.14.0",
    "mypy>=1.11.0",
    "lxml-stubs>=0.5.0",
    "bandit>=1.7.10",
    "pip-audit>=2.8.0",
]

[project.scripts]
email-rag-ingest = "src.ingest:main"
email-rag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = false
warn_redundant_casts = true
ignore_missing_imports = true

# Heavy third-party usage (networkx/sklearn/pandas/streamlit) — suppress inference errors
[[tool.mypy.overrides]]
module = [
    "src.network_analysis",
    "src.email_clusterer",
    "src.topic_modeler",
    "src.temporal_analysis",
    "src.query_expander",
    "src.thread_summarizer",
    "src.dossier_generator",
    "src.web_app",
    "src.image_embedder",
    "src.rfc2822",
]
disallow_untyped_defs = false
disable_error_code = ["index", "assignment", "return-value", "arg-type", "type-var", "call-overload", "operator", "union-attr", "attr-defined", "misc", "no-redef", "var-annotated", "dict-item"]
