[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "outlook-email-rag"
version = "0.1.0"
description = "Local RAG for Outlook .olm email archives with an MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "sentence-transformers>=2.7.0",
    "transformers>=5.0.0rc3,<6",  # patched for CVE-2026-1839; repo shims FlagEmbedding's removed FX helper
    "FlagEmbedding>=1.3.0",  # unlocks BGE-M3 sparse + ColBERT (dense-only fallback without it)
    "chromadb>=0.5.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "lxml>=5.0.0",
    "networkx>=3.2",
    "pandas>=2.1.0",
    "rank_bm25>=0.2.2",
    "jinja2>=3.0.0",
    "spacy>=3.7.0",
    "textstat>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "streamlit>=1.40.0",
    # Security: minimum versions for transitive deps with known CVEs
    "PyJWT>=2.12.0",  # CVE-2026-32597 (required by mcp)
    "tornado>=6.5.5",  # CVE-2026-31958 (required by streamlit)
]

[project.urls]
Homepage = "https://github.com/sebastianspicker/outlook-email-rag"
Repository = "https://github.com/sebastianspicker/outlook-email-rag"
Issues = "https://github.com/sebastianspicker/outlook-email-rag/issues"
Documentation = "https://github.com/sebastianspicker/outlook-email-rag#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
    "mypy>=1.11.0",
    "lxml-stubs>=0.5.0",
    "bandit>=1.7.10",
    "pip-audit>=2.8.0",
]

[project.scripts]
email-rag-ingest = "src.ingest:main"
email-rag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 130
target-version = "py311"
extend-exclude = [".codex"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "C4", "PIE", "T20", "PLC", "PLE"]
ignore = [
    "SIM102",  # collapsible-if — nested ifs often clearer than combined conditions
    "SIM105",  # suppressible-exception — contextlib.suppress less explicit than try/except
    "SIM108",  # if-else-ternary — multi-line ternaries hurt readability
    "SIM115",  # open-file-with-context — some opens are intentionally long-lived (lock fds)
    "SIM117",  # multiple-with — combined with-statements reduce readability for complex CMs
    "PLC0415",  # import-outside-top-level — lazy imports used for optional deps throughout
    "T201",  # print — CLI uses print for user output intentionally
    "RUF001",  # ambiguous-unicode — email content contains legitimate non-ASCII chars
    "RUF002",  # ambiguous-unicode-docstring
    "RUF003",  # ambiguous-unicode-comment
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.11"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

# Heavy third-party usage (networkx/sklearn/pandas/streamlit) — suppress inference errors
[[tool.mypy.overrides]]
module = [
    "src.network_analysis",
    "src.email_clusterer",
    "src.topic_modeler",
    "src.temporal_analysis",
    "src.query_expander",
    "src.thread_summarizer",
    "src.dossier_generator",
    "src.web_app",
    "src.image_embedder",
    "src.rfc2822",
    "src.embedder",
    "src.retriever",
    "src.parse_olm",
    "src.olm_xml_helpers",
    "src.fine_tuner",
]
disallow_untyped_defs = false
disable_error_code = ["index", "assignment", "return-value", "arg-type", "type-var", "call-overload", "operator", "union-attr", "attr-defined", "misc", "no-redef", "var-annotated", "dict-item"]
