[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "outlook-email-rag"
version = "0.2.0"
description = "Local RAG for Outlook .olm email archives with an MCP server"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Email RAG contributors" }]
keywords = ["outlook", "email", "rag", "mcp", "local-first", "ediscovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "sentence-transformers>=2.7.0",
    "transformers>=5.0.0rc3,<6",  # patched for CVE-2026-1839; repo shims FlagEmbedding's removed FX helper
    "FlagEmbedding>=1.3.0",  # unlocks BGE-M3 sparse + ColBERT (dense-only fallback without it)
    "chromadb>=0.5.0",
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0.0",
    "lxml>=6.1.0",
    "networkx>=3.2",
    "pandas>=2.1.0",
    "rank_bm25>=0.2.2",
    "jinja2>=3.0.0",
    "spacy>=3.7.0",
    "textstat>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "streamlit>=1.40.0",
    # Security: minimum versions for transitive deps with known CVEs
    "PyJWT>=2.12.0",  # CVE-2026-32597 (required by mcp)
    "tornado>=6.5.5",  # CVE-2026-31958 (required by streamlit)
    "cryptography>=46.0.7",  # CVE-2026-34073, CVE-2026-39892 (required by multiple deps)
    "pillow>=12.2.0",  # CVE-2026-40192 (required by transformers/sentence-transformers)
    "pygments>=2.20.0",  # CVE-2026-4539 (required by rich)
    "python-multipart>=0.0.26",  # CVE-2026-40347 (required by streamlit)
    "requests>=2.33.0",  # CVE-2026-25645 (required by multiple deps)
]

[project.urls]
Homepage = "https://github.com/sebastianspicker/outlook-email-rag"
Repository = "https://github.com/sebastianspicker/outlook-email-rag"
Issues = "https://github.com/sebastianspicker/outlook-email-rag/issues"
Documentation = "https://github.com/sebastianspicker/outlook-email-rag/tree/dev/docs"
Changelog = "https://github.com/sebastianspicker/outlook-email-rag/blob/dev/CHANGELOG.md"
Security = "https://github.com/sebastianspicker/outlook-email-rag/blob/dev/SECURITY.md"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",  # CVE-2025-71176 fixed in 9.0.3
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.14.0",
    "mypy>=1.11.0",
    "lxml-stubs>=0.5.0",
    "bandit>=1.7.10",
    "pip-audit>=2.8.0",
]

[project.scripts]
email-rag-ingest = "src.ingest:main"
email-rag = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 130
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF", "C4", "PIE", "T20", "PLC", "PLE"]
ignore = [
    "SIM102",  # collapsible-if — nested ifs often clearer than combined conditions
    "SIM105",  # suppressible-exception — contextlib.suppress less explicit than try/except
    "SIM108",  # if-else-ternary — multi-line ternaries hurt readability
    "SIM115",  # open-file-with-context — some opens are intentionally long-lived (lock fds)
    "SIM117",  # multiple-with — combined with-statements reduce readability for complex CMs
    "PLC0415",  # import-outside-top-level — lazy imports used for optional deps throughout
    "T201",  # print — CLI uses print for user output intentionally
    "RUF001",  # ambiguous-unicode — email content contains legitimate non-ASCII chars
    "RUF002",  # ambiguous-unicode-docstring
    "RUF003",  # ambiguous-unicode-comment
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore:Flat-flag usage is deprecated\\..*:DeprecationWarning",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true

# Heavy third-party usage (networkx/sklearn/pandas/streamlit) — suppress inference errors
[[tool.mypy.overrides]]
module = [
    "src.network_analysis",
    "src.email_clusterer",
    "src.topic_modeler",
    "src.temporal_analysis",
    "src.query_expander",
    "src.thread_summarizer",
    "src.dossier_generator",
    "src.web_app",
    "src.image_embedder",
    "src.rfc2822",
    "src.embedder",
    "src.retriever",
    "src.parse_olm",
    "src.olm_xml_helpers",
    "src.fine_tuner",
]
disallow_untyped_defs = false
disable_error_code = ["index", "assignment", "return-value", "arg-type", "type-var", "call-overload", "operator", "union-attr", "attr-defined", "misc", "no-redef", "var-annotated", "dict-item"]
